# Dev-Server-Workflow

./: .dockerignore  .env.production  .env.test  .gitignore  .gitlab-ci.yml  ARCHITECTURE.md  CHANGELOG.md  CLEANUP_README.md  COMPLETED_TASKS.md  DOCKER.md  Dockerfile  Dockerfile.production  IMPLEMENTATION.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  OPENHANDS_RESOLVER.md  README.md  README.md.new  REORGANIZATION_PLAN.md  backup_files_list.txt  bandit_results.json  bandit_results.txt  dependency_graph.md  dev-server-cli.sh  docker-compose.production.yml  docker-compose.web-ui.yml  docker-compose.yml  docker-entrypoint.sh  docker-start.sh  fix_import_errors.sh  monitoring.patch  npm_audit_results.json  prepare_release.sh  progress_log.md  pytest.ini  replace-docker-compose.sh  replace-docker-compose.sh.bak.20250509124941  requirements.txt  run_tests.sh  safety_results.json  (+21 more)
cli/: README.md  ai_assistant.sh.bak.20250509124941  ai_assistant_improved.sh  ai_command.sh  config.sh  config_improved.sh.bak.20250509124941  config_management.sh  config_manager.sh  (+19 more)
src/llm_cost_analyzer/: .env.example  README.md  pyproject.toml
src/llm_cost_analyzer/llm_cost_analyzer/api/endpoints/: estimate.py
src/llm_cost_analyzer/llm_cost_analyzer/core/: task_cost_estimator.py
src_backup/mcp_servers/prompt_mcp_server/: pyproject.toml
src_backup/mcp_servers/prompt_mcp_server/prompt_mcp_server/api/: router.py
src_backup/mcp_servers/prompt_mcp_server/prompt_mcp_server/api/endpoints/: cost.py  models.py
src_backup/mcp_servers/prompt_mcp_server/prompt_mcp_server/core/: prompt_optimizer.py
src_backup/mcp_servers/prompt_mcp_server/prompt_mcp_server/docs/: prompt_optimization.md
src_backup/mcp_servers/prompt_mcp_server/prompt_mcp_server/templates/: task_complexity.j2
(+827 files in other folders)
