[tool.poetry]
name = "prompt-mcp-server"
version = "0.1.0"
description = "A Prompt MCP Server with templates, memory, and pre-prompts"
authors = ["OpenHands <openhands@all-hands.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.27.0"
promplate = "^0.3.4"
pydantic = "^2.6.0"
python-dotenv = "^1.0.0"
langchain = "^0.1.0"
langchain-community = "^0.0.16"
langchain-openai = "^0.0.5"
langchain-anthropic = "^0.1.1"
redis = "^5.0.1"
chromadb = "^0.4.22"
jinja2 = "^3.1.3"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
black = "^24.1.0"
isort = "^5.13.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100